# icpcuda_helloworld

./: .gitignore  CMakeLists.txt  README.md
cmake_modules/: Findfreenect2.cmake  Findicpcuda.cmake  Findopt.cmake
src/: ICP.cpp
